--- a/Css_Online_Courses/assets/css/main.css
+++ b/Css_Online_Courses/assets/css/main.css
@@ -6,7 +6,7 @@ html{
     /* font-size = 100% = 16px = 1rem*/
     font-size: 62.5%;
     line-height: 1.6rem;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
     
 }
@@ -17,6 +17,7 @@ html{
 }
 
 .header__page {
+    
 
 }
 
@@ -25,10 +26,12 @@ html{
     line-height: 53px;
     color: #374639;
     font-weight: 400;
+    margin-top: 52px;
     margin-bottom: 0px;
 }
 
 .header__content{
+   
 
 }
 
@@ -38,6 +41,7 @@ html{
     color: #3F514B;
     font-weight: 400;
     margin-top: 10px;
+    margin-bottom: 34px;
 
 }
 
@@ -60,16 +64,17 @@ app__container-tranning{
 }
 
 .content__heading__yoga{
-    font-size: 16px;
-    line-height: 18px;
+    font-size: 18px;
+    line-height: 20px;
     font-weight: 400;
 }
 
 .content__title{
-    font-size: 14px;
-    line-height: 14px;
+    font-size: 17px;
+    line-height: 24px;
     padding-right: 10px;
-    font-weight: 350;
+    font-weight: 400;
+    color: #3F514B;
 
 }
 
@@ -82,17 +87,20 @@ app__container-tranning{
 }
 
 .content-item__price-old{
-    color: #666;
+    color: #72776C;
     text-decoration: line-through;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
+    line-height: 18px;
+    font-weight: 400;
     margin-right: 8px;
 
 }
 
 .content-item__price-current{
-    font-size: 1.6rem;
-    color: #666;
-    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 23px;
+    color: #3F514B;
+    font-weight: 400;
 
 }
 
@@ -122,15 +130,24 @@ app__container-tranning{
 }
 
 .training-week{
-    color: #666;
-    font-size: 1.4rem;
+    color: #72776C;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: left;
+
 }
 
 .training-title{
-    color: #666;
-    font-size: 1.4rem;
+    color: #4E5C58;
     padding-left: 20px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+
 }
+
 
 
 
@@ -138,87 +155,113 @@ app__container-tranning{
 
 /* footer */
 .footer{
-    padding: 70px 0;
+    padding-top: 48px;
+    padding-bottom: 48px;
+
     background-color: #F4F4F4;
     width: 100%;
+    /* height: 704px; */
+    
+    display: block;
     
 }
 
 .footer__main{
-    margin: 0 100px;
-    height: 100%;
-    background: #FFFFFF;
-    border-radius: 2px;
+    margin: 20px 66px 70px;
+
+    /* height: 575px; */
+    background-color: #FFFFFF;
+    border-radius: 20px;
     display: flex;
-    
     position: relative;
     
 }
 
 .footer__img{
     display: block;
-    margin-left: 12px;
-    padding: 26px;
-    width: 50%;
-    align-items: center;
+    margin: 48px 48px 48px 36px;
     flex: 1;
 }
 
 .footer__img-item{
-    width: 100%;
+    display: block;
+    
 }
 
 .footer__content {
-    display: flex;
+    /* 
     width: 50%;
-    text-align: center;
-    margin-right: 12px;
-
+   
     position: absolute;
     top: 30px;
     right: 20px;
-
-    flex-direction: column;
     align-items: center;
+     */
+
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    text-align: center;
+    flex: 1;
+    margin-right: 100px;
     
 }
 
 .footer__heading{
-    font-size: 10px;
-    color: rgba(0, 0, 0, 0.3);
+    color: #0000004D;
     text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
 
 }
 
 .footer__heading-icon{
-    font-size: 50px;
-    color: rgba(0, 0, 0, 0.3);
-    margin-top: 10px;
+    margin-top: 20px; 
+    font-size: 45px;
+    color: #0000004D;
 }
 
 .footer__title{
-    display: block;
-    font-size: 25px;
-    color: #0D0D0D;
-    line-height: 27px;
+
+    /* 
     width: 80%;
-    font-weight: 500;
     margin: 25px 0 0 0;
+    text-align: center; */
+    display: block;
+    color: #0D0D0D;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    /* line-height: 30px; */
+    margin: 10px 0;
+    
+
+    line-height: 22px;
+    font-weight: 400;
+
 
 }
 
 .footer__name{
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 400;
-    margin: 16px 0 0 0;
+    margin-top: 0px;
+    margin-bottom: 0;
+    line-height: 15px;
+    
+    color: #0D0D0D;
 
 }
 
-.footer__job{
-    font-size: 12px;
-    color: rgba(0, 0, 0, 0.3);
-
+.footer__job{  
+    color: #0000004D;  
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 13px;
+    margin-top: 4px;
+    
+    
 }
 
 
